# GraPla

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GraPla  Makefile  README.md  build.sh  config.h.in  main.cc  test.txt
src/: CMakeLists.txt  Makefile  ppm_image.cc  ppm_image.h
